docs: update README, Design.md and requirements for v0.4.0
README.md:
- Updated feature list (maps, wiki linking, calendar, longform, gallery)
- Expanded CLI examples for all 10 modules
- Fixed broken documentation links
- Added architecture diagram and technology section

Design.md:
- Comprehensive rewrite reflecting current codebase
- Updated data schema (maps, markers, attachments, longform)
- Added Calendar/time system details
- Documented all UI views and wiki linking
- Updated development standards (Ruff, TDD)

requirements.txt:
- Pinned all dependency versions
- Removed flake8/black (superseded by ruff)
- Added pytest-cov and myst-parser
- Organized by category

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
-PySide6
-pytest
-Sphinx
-flake8
-mypy
-black
-pytest-qt
-markdown
+# Core GUI Framework
+PySide6==6.10.1
 
-Pillow
-ruff
+# Testing
+pytest==9.0.2
+pytest-qt==4.5.0
+pytest-cov==7.0.0
+
+# Documentation
+Sphinx==8.2.3
+myst-parser==4.0.1
+
+# Code Quality
+ruff==0.14.10
+mypy==1.19.0
+
+# Image Processing
+Pillow==12.0.0
+
+# Markdown Support
+Markdown==3.10
+
+# Packaging (optional, for building executables)
+pyinstaller==6.17.0
