--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ name = "ProjektKraken"
 version = "0.4.0"
 description = "Project Kraken - A Timeline/Wiki Application"
 requires-python = ">=3.13"
+authors = [
+    {name = "Christian Mintert", email = "christian.mintert@example.com"}
+]
+
 dependencies = [
     "PySide6",
     "Pillow",
