--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pytest-cov==7.0.0
 Sphinx==8.2.3
 myst-parser==4.0.1
 furo==2025.9.25
+sphinxcontrib-mermaid>=1.0.0
 
 # Code Quality
 ruff==0.14.10
