--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,10 @@ target-version = "py313"
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
-select = ["E4", "E7", "E9", "F", "I"]
-ignore = []
+select = ["E4", "E7", "E9", "F", "I", "ANN"]
+ignore = [
+    "ANN401", # Dynamically typed expressions (Any) are allowed
+]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
