--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ authors = [
 dependencies = [
     "PySide6",
     "Pillow",
+    "fastapi",
+    "uvicorn[standard]",
+    "python-multipart",
 ]
 license = {text = "AGPL-3.0-only"}
 
