feat: migrate trajectory storage to OGC MF-JSON format
Migrated trajectory serialization from custom [[t,x,y],...] format to OGC Moving Features JSON (MF-JSON) MovingPoint structure for future-proof geospatial interoperability.

Changes: - Add geojson>=3.0.0 dependency to pyproject.toml - Add keyframes_to_mfjson() and mfjson_to_keyframes() helpers to trajectory.py - Update TrajectoryRepository to serialize/deserialize MF-JSON - Add _parse_trajectory_json() for backward-compatible parsing - Add _migrate_trajectories_to_mfjson() for auto-migration on DB connect - Add 7 new tests for serialization and backward compatibility

New JSON structure: {type: MovingPoint, coordinates: [[x,y],...], datetimes: [t,...]}

Testing: 940 unit tests pass, no regressions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "fastapi",
     "uvicorn[standard]",
     "python-multipart",
+    "geojson>=3.0.0",
 ]
 license = {text = "AGPL-3.0-only"}
 
