--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "uvicorn[standard]",
     "python-multipart",
     "geojson>=3.0.0",
+    "pyvis",
 ]
 license = {text = "AGPL-3.0-only"}
 
